Steps 8-9: code generator, entities, repositories and BEANS
- lxrin-ql-codegen: reads pg_catalog (tables, views, partitioned tables, columns, identity/serial sequences,
  generated columns, domains, enums, arrays, comments, primary/unique/foreign keys, unique indexes)
- generates table classes with typed columns and keys, row records, entities, composite key records,
  enums, repository base classes with unique-key finders, Tables, a repository index, and repository
  subclasses once (never overwritten); configurable naming (prefix stripping, singularisation, overrides),
  forced types and enum mappings
- DatabaseProvisioner (Testcontainers + Flyway / SQL scripts) and a CLI
- golden-file tests that also compile the output with -Werror and doclint; schema reader test against PostgreSQL
- core: Entity with state and change tracking, TableRepository (createKey via UUIDv7 or sequence, save, saveAll
  with multi-row inserts and JDBC-batched updates in one transaction, insert, update, delete, finders,
  keyset pages, stale/optimistic-lock detection, entity state restored on rollback), ReadOnlyRepository,
  BEANS with SimpleBeanRegistry
- cursors encode values through their DataTypes, so value objects work as sort keys
- integration tests use code generated from Flyway migrations of an ISMS-like schema

Co-Authored-By: Claude Opus 5.5 <noreply@anthropic.com>